--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "pokedex",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A very basic Pokédex built in React (with React Hooks)",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "terser-webpack-plugin": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
